--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +8,53 @@
     <link rel="stylesheet" href="./public/css/app.css">
 </head>
 <body>
-    
+    <header>
+     <nav class="row p-1 bg-primary text-white">
+        <div class="col-6 text-center">
+            <h5 class="mt-1">START BOOTSTRAP</h5>
+        </div>
+        <div class="col-6 text-center">
+            <a href="" class="text-decoration-none text-white mt-2">SIGN UP</a>
+            <a href="" class="text-decoration-none text-white mt-2">LOG IN</a>
+        </div>
+        </nav>
+        <div class="bg-danger text-center p-5 text-white">
+            <h1>ONE Page Wonder <br> Will Rock Your Socks Off</h1>
+            <button class="btn btn-primary rounded-pill p-3 mt-3" type="submit">LEARN MORE</button>
+        </div>
+    </header>
+    <section class="container text-center p-5">
+        <div class="row">
+            <div class="col-6 mt-5">
+                <h2>Lorem IPSUM DOLOR NTMZ LKM</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum optio eius odit, voluptatem dolores est recusandae quas dolorum aliquam iure quisquam architecto omnis commodi sapiente alias inventore aperiam debitis laborum!</p>
+            </div>
+            <div class="col-6">
+                <img src="./public/img/01.jpg" class="rounded-circle mb-5"  alt="renois" width="300px">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-6">
+                <img src="./public/img/02.jpg" class="rounded-circle mb-5"  alt="renois" width="300px">
+            </div>
+            <div class="col-6 mt-5">
+                <h2>Lorem IPSUM DOLOR NTMZ LKM</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum optio eius odit, voluptatem dolores est recusandae quas dolorum aliquam iure quisquam architecto omnis commodi sapiente alias inventore aperiam debitis laborum!</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-6 mt-5">
+                <h2>Lorem IPSUM DOLOR NTMZ LKM</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum optio eius odit, voluptatem dolores est recusandae quas dolorum aliquam iure quisquam architecto omnis commodi sapiente alias inventore aperiam debitis laborum!</p>
+            </div>
+            <div class="col-6">
+                <img src="./public/img/03.jpg" class="rounded-circle mb-5"  alt="renois" width="300px">
+            </div>
+        </div>
+    </section>
+    <footer class="bg-dark text-white text-center p-4">
+        <p>Copyrigth &copy; Your Website 2020</p>
+    </footer>
 </body>
 </html>
